--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="app_name">Swish - SMS Wish</string>
     <string name="action_settings">Settings</string>
     <string name="profile_pic">Profile Pic</string>
-
+    <string name="notification_title">Friends have Birthday today!</string>
+    <string name="notification_text">Let\'s Swish</string>
+    
     <!-- Pictures -->
     <array name="profile_pics">
         <item>@drawable/blank_profile_pic</item>
     </array>
-
 </resources>
